# cpp-design-patterns

./: CMakeConfig.cmake  CMakeLists.txt  LICENSE  README.md
behavioral/: CMakeLists.txt
behavioral/chain_of_responsibility/: CMakeLists.txt  cor_broker.cpp  cor_pointer.cpp
behavioral/command/: CMakeLists.txt  command.cpp  composite_command.cpp
behavioral/interpreter/: CMakeLists.txt  interpreter.cpp
behavioral/iterator/: CMakeLists.txt  boost_iterator  boost_iterator_facade.cpp  iterator.cpp  std_iterator.cpp
behavioral/mediator/: CMakeLists.txt  broker.cpp
behavioral/mediator/chat_room/: chat_room.cpp  chat_room.hpp  mediator.cpp  person.cpp  person.hpp
behavioral/memento/: CMakeLists.txt  memento.cpp  undo_redo  undo_redo.cpp
behavioral/observer/: CMakeLists.txt  boost_signals2  boost_signals2.cpp  observer.cpp
behavioral/state/: CMakeLists.txt  boost_msm.cpp  state.cpp
behavioral/strategy/: CMakeLists.txt  policy  policy.cpp  strategy.cpp
behavioral/template_method/: CMakeLists.txt  template_method.cpp
behavioral/visitor/: CMakeLists.txt
behavioral/visitor/double_dispatch/: model.hpp  visitor.cpp  visitor.hpp
behavioral/visitor/multiple_dispatch/: visitor.cpp
creational/builder/: CMakeLists.txt  builder.cpp  fluent_builder.cpp  groovy_style.cpp  naive_builder.cpp
creational/builder/facets/: facets.cpp  person.cpp  person.hpp  (+4 more)
creational/factory/: CMakeLists.txt  factory.cpp  factory_method.cpp
creational/prototype/: CMakeLists.txt  prototype.cpp  prototype_factory.cpp  serialization.cpp
structural/: CMakeLists.txt
structural/adapter/: CMakeLists.txt  adapter.cpp  std_stack.cpp
structural/bridge/: CMakeLists.txt  shape_sizing.cpp
structural/composite/: CMakeLists.txt  composite.cpp  geometric.cpp  neurons.cpp
structural/decorator/: CMakeLists.txt  functional_decorator.cpp  mixin_inheritance.cpp  wrapping_decorator.cpp
structural/facade/: CMakeLists.txt  buffer.hpp  console.hpp  facade.cpp  no_facade.cpp  viewport.hpp  window.hpp
structural/flyweight/: CMakeLists.txt  boost_flyweight.cpp  flyweight.cpp
structural/nullobject/: CMakeLists.txt  nullobject.cpp
structural/proxy/: CMakeLists.txt  communication_proxy.cpp  std_smart_pointers.cpp  virtual_proxy.cpp
(+26 files in other folders)
